remove --location=mbr from RHEL kickstarts
This is unnecessary - Anaconda automatically detects the type of
bootloader. In fact, the documentation clearly says that:

    In most cases, this option does not need to be specified.

Signed-off-by: Jiri Jaburek <comps@nomail.dom>

--- a/products/rhel8/kickstart/ssg-rhel8-anssi_bp28_minimal-ks.cfg
+++ b/products/rhel8/kickstart/ssg-rhel8-anssi_bp28_minimal-ks.cfg
@@ -61,7 +61,7 @@ timezone --utc America/New_York
 # Refer to e.g.
 #   https://pykickstart.readthedocs.io/en/latest/commands.html#rootpw
 # to see how to create encrypted password form for different plaintext password
-bootloader --location=mbr
+bootloader
 
 # Initialize (format) all disks (optional)
 zerombr
