--- a/products/rhel7/kickstart/ssg-rhel7-anssi_nt28_minimal-ks.cfg
+++ b/products/rhel7/kickstart/ssg-rhel7-anssi_nt28_minimal-ks.cfg
@@ -70,7 +70,7 @@ timezone --utc America/New_York
 # Plaintext password is: password
 # Refer to e.g. https://pykickstart.readthedocs.io/en/latest/commands.html#rootpw to see how to create
 # encrypted password form for different plaintext password
-bootloader --location=mbr
+bootloader
 
 # Initialize (format) all disks (optional)
 zerombr
