--- a/products/rhel9/kickstart/ssg-rhel9-anssi_bp28_minimal-ks.cfg
+++ b/products/rhel9/kickstart/ssg-rhel9-anssi_bp28_minimal-ks.cfg
@@ -61,7 +61,7 @@ timezone --utc America/New_York
 # Refer to e.g.
 #   https://pykickstart.readthedocs.io/en/latest/commands.html#rootpw
 # to see how to create encrypted password form for different plaintext password
-bootloader --location=mbr
+bootloader
 
 # Initialize (format) all disks (optional)
 zerombr
