--- a/products/rhel9/kickstart/ssg-rhel9-ospp-ks.cfg
+++ b/products/rhel9/kickstart/ssg-rhel9-ospp-ks.cfg
@@ -72,7 +72,7 @@ timezone --utc America/New_York
 # Refer to e.g.
 #   https://pykickstart.readthedocs.io/en/latest/commands.html#rootpw
 # to see how to create encrypted password form for different plaintext password
-bootloader --location=mbr --append="audit=1 audit_backlog_limit=8192 slub_debug=P page_poison=1 vsyscall=none"
+bootloader --append="audit=1 audit_backlog_limit=8192 slub_debug=P page_poison=1 vsyscall=none"
 
 # Initialize (format) all disks (optional)
 zerombr
