remove default --append arguments from RHEL kickstarts
'rhgb' and 'quiet' are already added by Anaconda by default,
as its documentation mentions:

    The rhgb and quiet parameters are always used, even if
    you do not specify them here or do not use the --append=
    command at all.

And the 'crashkernel=auto' is already the default for RHEL-7+,
with specific sizes (Anaconda-generated) sometimes appearing
instead of 'auto', likely on low-memory systems, see also:
https://access.redhat.com/solutions/59432

In either case, we likely shouldn't touch the default.

In fact, specifying it actually reduces security somewhat, and
some profiles already disable kdump anyway.

Signed-off-by: Jiri Jaburek <comps@nomail.dom>

--- a/products/rhel8/kickstart/ssg-rhel8-ism_o-ks.cfg
+++ b/products/rhel8/kickstart/ssg-rhel8-ism_o-ks.cfg
@@ -73,7 +73,7 @@ selinux --enforcing
 timezone --utc America/New_York
 
 # Specify how the bootloader should be installed (required)
-bootloader --append="crashkernel=auto rhgb quiet"
+bootloader
 
 # Initialize (format) all disks (optional)
 zerombr
