--- a/products/rhel9/kickstart/ssg-rhel9-ism_o-ks.cfg
+++ b/products/rhel9/kickstart/ssg-rhel9-ism_o-ks.cfg
@@ -73,7 +73,7 @@ selinux --enforcing
 timezone --utc America/New_York
 
 # Specify how the bootloader should be installed (required)
-bootloader --append="crashkernel=auto rhgb quiet"
+bootloader
 
 # Initialize (format) all disks (optional)
 zerombr
