use keyboard --vckeymap in RHEL kickstarts
The Anaconda documentation, even RHEL-7, states that:

    Either the --vckeymap or the --xlayouts option must be used.

The older syntax was likely supported due to ancient RHEL
compatibility, but is no longer valid for recent Fedoras,
and therefore probably RHEL-10+.

Signed-off-by: Jiri Jaburek <comps@nomail.dom>

--- a/products/rhel7/kickstart/ssg-rhel7-cis-ks.cfg
+++ b/products/rhel7/kickstart/ssg-rhel7-cis-ks.cfg
@@ -41,7 +41,7 @@ install
 lang en_US.UTF-8
 
 # Set system keyboard type / layout (required)
-keyboard us
+keyboard --vckeymap us
 
 # Configure network information for target system and activate network devices in the installer environment (optional)
 # --onboot	enable device at a boot time
