--- a/products/rhel7/kickstart/ssg-rhel7-cis_workstation_l1-ks.cfg
+++ b/products/rhel7/kickstart/ssg-rhel7-cis_workstation_l1-ks.cfg
@@ -41,7 +41,7 @@ install
 lang en_US.UTF-8
 
 # Set system keyboard type / layout (required)
-keyboard us
+keyboard --vckeymap us
 
 # Configure network information for target system and activate network devices in the installer environment (optional)
 # --onboot	enable device at a boot time
