--- a/products/rhel8/kickstart/ssg-rhel8-pci-dss-ks.cfg
+++ b/products/rhel8/kickstart/ssg-rhel8-pci-dss-ks.cfg
@@ -36,7 +36,7 @@
 lang en_US.UTF-8
 
 # Set system keyboard type / layout (required)
-keyboard us
+keyboard --vckeymap us
 
 # Configure network information for target system and activate network devices in the installer environment (optional)
 # --onboot	enable device at a boot time
