fix broken bootloader passwords in RHEL kickstarts
There's more layers of breakage.

First, the missing --iscrypted made Anaconda treat the provided
crypt-style string as plaintext, resulting in the password
never actually working.

Second, the referenced

    https://pykickstart.readthedocs.io/en/latest/commands.html#rootpw

is not even for the right kickstart command (!!!), referencing
'rootpw' instead of 'bootloader'.

When this crypt-style password is used (correctly with --iscrypted),
the installer actually catches this issue:

    GRUB2 encrypted password must be in grub.pbkdf2 format.

The RHEL-7+ Anaconda documentation mentions the correct procedure:

    To generate an encrypted password, use the grub2-mkpasswd-pbkdf2
    command, enter the password you want to use, and copy the command's
    output (the hash starting with grub.pbkdf2) into the Kickstart file.

Curiously enough, this was correctly done for 'ssg-rhel8-cis-ks.cfg',
but it is broken everywhere else.

To make things consistent and avoid generating another salt, I have
just copy/pasted the hashed password from 'ssg-rhel8-cis-ks.cfg'
to others.

Signed-off-by: Jiri Jaburek <comps@nomail.dom>

--- a/products/rhel8/kickstart/ssg-rhel8-anssi_bp28_minimal-ks.cfg
+++ b/products/rhel8/kickstart/ssg-rhel8-anssi_bp28_minimal-ks.cfg
@@ -59,7 +59,7 @@ timezone --utc America/New_York
 # Specify how the bootloader should be installed (required)
 # Plaintext password is: password
 # Refer to e.g.
-#   https://pykickstart.readthedocs.io/en/latest/commands.html#rootpw
+#   grub2-mkpasswd-pbkdf2
 # to see how to create encrypted password form for different plaintext password
 bootloader
 
