--- a/products/rhel7/kickstart/ssg-rhel7-anssi_nt28_minimal-ks.cfg
+++ b/products/rhel7/kickstart/ssg-rhel7-anssi_nt28_minimal-ks.cfg
@@ -68,7 +68,7 @@ timezone --utc America/New_York
 
 # Specify how the bootloader should be installed (required)
 # Plaintext password is: password
-# Refer to e.g. https://pykickstart.readthedocs.io/en/latest/commands.html#rootpw to see how to create
+# Refer to e.g. grub2-mkpasswd-pbkdf2 to see how to create
 # encrypted password form for different plaintext password
 bootloader
 
