--- a/products/rhel9/kickstart/ssg-rhel9-cui-ks.cfg
+++ b/products/rhel9/kickstart/ssg-rhel9-cui-ks.cfg
@@ -70,7 +70,7 @@ timezone --utc America/New_York
 
 # Specify how the bootloader should be installed (required)
 # Refer to e.g.
-#   https://pykickstart.readthedocs.io/en/latest/commands.html#rootpw
+#   grub2-mkpasswd-pbkdf2
 # to see how to create encrypted password form for different plaintext password
 bootloader --append="audit=1 audit_backlog_limit=8192 slub_debug=P page_poison=1 vsyscall=none"
 
