--- a/products/rhel9/kickstart/ssg-rhel9-pci-dss-ks.cfg
+++ b/products/rhel9/kickstart/ssg-rhel9-pci-dss-ks.cfg
@@ -67,7 +67,7 @@ timezone --utc America/New_York
 # Specify how the bootloader should be installed (required)
 # Plaintext password is: password
 # Refer to e.g.
-#   https://pykickstart.readthedocs.io/en/latest/commands.html#rootpw
+#   grub2-mkpasswd-pbkdf2
 # to see how to create encrypted password form for different plaintext password
 #
 # PASSWORD TEMPORARILY DISABLED
