Add Kickstarts to the changelog

--- a/.github/workflows/release-changelog.json
+++ b/.github/workflows/release-changelog.json
@@ -18,7 +18,7 @@
       },
       {
         "title": "### Changes in Remediations",
-        "labels": ["Ansible", "Bash", "Blueprint", "Ignition", "Kubernetes"]
+        "labels": ["Ansible", "Bash", "Blueprint", "Ignition", "Kubernetes", "Kickstart"]
       },
       {
         "title": "### Changes in Checks",
