Update CIS OCP 1.3.0 profile details
We recently merged a template profile for CIS OCP 1.3.0:

  https://github.com/ComplianceAsCode/content/pull/10505

This control file is a template that includes placeholders for
contributors to fill out as we implement the profile.

This commit updates the profile data to point to the relevant CIS
upstream profile, sets the level hierarchy, and sets a unique profile
ID.

--- a/controls/cis_ocp_1_3_0.yml
+++ b/controls/cis_ocp_1_3_0.yml
@@ -1,10 +1,9 @@
 policy: CIS RedHat OpenShift Container Platform Benchmark
 title: CIS RedHat OpenShift Container Platform Benchmark
-id: PLACEHOLDER
+id: cis_ocp_1.3.0
 version: 1.3.0
-source: https://example.com/benchmark
+source: https://www.cisecurity.org/benchmark/kubernetes
 levels:
 - id: level_1
-  inherits_from: PLACEHOLDER
 - id: level_2
-  inherits_from: PLACEHOLDER
+  inherits_from: level_1
