--- a/linux_os/guide/system/network/network-nftables/nftables_rules_permanent/rule.yml
+++ b/linux_os/guide/system/network/network-nftables/nftables_rules_permanent/rule.yml
@@ -2,7 +2,7 @@ documentation_complete: true
 
 prodtype: sle15
 
-title: 'Ensure nftables rules are permanent'
+title: 'Ensure nftables Rules are Permanent'
 
 description: |-
     nftables is a subsystem of the Linux kernel providing filtering and classification of
