Fix title case of rule

--- a/linux_os/guide/system/network/network-nftables/set_nftables_loopback_traffic/rule.yml
+++ b/linux_os/guide/system/network/network-nftables/set_nftables_loopback_traffic/rule.yml
@@ -1,6 +1,6 @@
 documentation_complete: true
 
-title: 'Set nftables configuration for loopback traffic'
+title: 'Set nftables Configuration for Loopback Traffic'
 
 description: |-
     Configure the loopback interface to accept traffic.
