--- a/controls/cusp_fedora.yml
+++ b/controls/cusp_fedora.yml
@@ -32,7 +32,7 @@ controls:
   - id: 2.1
     title: Security policy selection
     description: >-
-      Users should apply the “Fedora Common User Security Policy” in the installer.
+      Users should apply the "Fedora Common User Security Policy" in the installer.
     status: manual
 
   - id: 2.2
