--- a/controls/cusp_fedora.yml
+++ b/controls/cusp_fedora.yml
@@ -269,7 +269,7 @@ controls:
       - chronyd_or_ntpd_set_maxpoll
       - chronyd_run_as_chrony_user
       - chronyd_specify_remote_server
-      #  schedulers
+      #  file permissions
       - file_owner_crontab
       - file_groupowner_crontab
       - file_permissions_crontab
