--- a/controls/cusp_firefox.yml
+++ b/controls/cusp_firefox.yml
@@ -7,7 +7,7 @@ source: "jodehnal's bachelor thesis on creating a SCAP profile for common users 
 
 controls:
   - id: 1.0
-    title: Firefox hardening
+    title: Firefox Hardening
     description: >-
       Secure configuration of Mozilla Firefox.
     status: automated
