Fix title to follow title case rule

--- a/linux_os/guide/system/network/network-iptables/iptables_ruleset_modifications/set_iptables_outbound_n_established/rule.yml
+++ b/linux_os/guide/system/network/network-iptables/iptables_ruleset_modifications/set_iptables_outbound_n_established/rule.yml
@@ -1,6 +1,6 @@
 documentation_complete: true
 
-title: 'Ensure outbound and established connections are configured'
+title: 'Ensure Outbound and Established Connections are Configured'
 
 description: |-
     Configure the firewall rules for new outbound and established connections.
